# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//test/xts/tools/build/suite.gni")

ohos_hap_assist_suite("DctsAVSessionServerTest") {
  hap_profile = "./src/main/config.json"
  deps = [
    ":avsession_js_assets",
    ":avsession_js_resources",
  ]

  certificate_profile = "./signature/openharmony_sx.p7b"
  hap_name = "DctsAVSessionServerTest"
  subsystem_name = "multimedia"
  part_name = "multimedia_av_session"
}
ohos_js_assets("avsession_js_assets") {
  source_dir = "./src/main/js"
  hap_profile = "./src/main/config.json"
}
ohos_resources("avsession_js_resources") {
  sources = [ "./src/main/resources" ]
  hap_profile = "./src/main/config.json"
}
