# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")

module_output_path = "dcts/server"

###############################################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/cJSON",
    "//commonlibrary/c_utils/base/include",
    "//base/security/access_token/interfaces/innerkits/accesstoke/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//foundation/communication/dsoftbus/adapter/common/include",
    "//foundation/communication/dsoftbus/core/common/include",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
    "//foundation/communication/dsoftbus/interfaces/kits/discovery",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//test/xts/dcts/common",
  ]
}

ohos_unittest("disTest") {
  module_out_path = module_output_path

  configs = [ ":module_private_config" ]

  sources = [
    "../../common/shm_utils.cpp",
    "net_trans_common.cpp",
  ]

  deps = [
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//foundation/communication/dsoftbus/sdk:softbus_client",
  ]
  external_deps = [ "c_utils:utils" ]
  subsystem_name = "distributeddatamgr"
  part_name = "kv_store"
}
###########################################################################################
