# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

ohos_hap_assist_suite("DctsRpcEtsServer") {
  hap_profile = "entry/src/main/module.json"
  hap_name = "DctsRpcEtsHapServer"

  testonly = true
  deps = [
    ":rpctageserver_js_assets",
    ":rpctageserver_resources",
  ]
  ets2abc = true
  certificate_profile = "signature/openharmony_sx.p7b"
  subsystem_name = "communication"
  part_name = "ipc"
}

ohos_app_scope("rpcserver_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_js_assets("rpctageserver_js_assets") {
  source_dir = "entry/src/main/ets"
}

ohos_resources("rpctageserver_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":rpcserver_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}
