# Copyright (C) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../tools/build/suite.gni")
dsoftbus_root_path = "../../../../../../foundation/communication/dsoftbus"
wifi_root_path = "../../../../../../foundation/communication/wifi/wifi"

ohos_executable("dsoftbusTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = true
  }

  sources = [
    "../common/net_trans_common.c",
    "../common/wifi_utils.cpp",
    "./dsoftbusTest.cpp",
  ]

  include_dirs = [
    "../common",
    "$dsoftbus_root_path/core/common/include",
    "$dsoftbus_root_path/adapter/common/include",
    "$dsoftbus_root_path/interfaces/kits/common",
    "$dsoftbus_root_path/interfaces/kits/bus_center",
    "$dsoftbus_root_path/interfaces/kits/discovery",
    "$dsoftbus_root_path/interfaces/kits/transport",
    "$wifi_root_path/frameworks/native/include",
    "$wifi_root_path/frameworks/native/interfaces",
    "$wifi_root_path/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
    "$wifi_root_path/services/wifi_standard/wifi_framework/wifi_toolkit/log",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "wifi:wifi_sdk",
  ]
  subsystem_name = "xts"
  part_name = "dcts"
}

ohos_copy("cpdsoftbusTest") {
  sources = [ "$root_out_dir/xts/dcts/dsoftbusTest" ]
  outputs = [ "$root_out_dir/suites/${XTS_SUITENAME}/testcases/dsoftbusTest" ]

  deps = [ ":dsoftbusTest" ]
  subsystem_name = "xts"
  part_name = "dcts"
}

group("Softbustestserver") {
  testonly = true
  if (is_standard_system) {
    deps = [
      ":cpdsoftbusTest",
      ":dsoftbusTest",
    ]
  }
}
