# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../../tools/build/suite.gni")

dsoftbus_root_path = "../../../../../../../foundation/communication/dsoftbus"

ohos_executable("socketdsoftbusTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = true
  }

  sources = [
    "../../common/socket_common.c",
    "./SocketTestServer.cpp",
  ]

  include_dirs = [
    "../../common",
    "$dsoftbus_root_path/core/common/include",
    "$dsoftbus_root_path/adapter/common/include",
    "$dsoftbus_root_path/interfaces/kits/common",
    "$dsoftbus_root_path/interfaces/kits/bus_center",
    "$dsoftbus_root_path/interfaces/kits/discovery",
    "$dsoftbus_root_path/interfaces/kits/transport",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "ipc:ipc_core",
    "wifi:wifi_sdk",
  ]
  subsystem_name = "xts"
  part_name = "dcts"
}

ohos_copy("cpdsocketdsoftbusTest") {
  sources = [ "$root_out_dir/xts/dcts/socketdsoftbusTest" ]
  outputs =
      [ "$root_out_dir/suites/${XTS_SUITENAME}/testcases/socketdsoftbusTest" ]

  deps = [ ":socketdsoftbusTest" ]
  subsystem_name = "xts"
  part_name = "dcts"
}

group("SocketTestServer") {
  testonly = true
  if (is_standard_system) {
    deps = [
      ":cpdsocketdsoftbusTest",
      ":socketdsoftbusTest",
    ]
  }
}
