# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

module_output_path = "dcts/softbus_base/transmission/sendstream"

ohos_moduletest_suite("DctsSoftBusTransStreamFunTest") {
  module_out_path = module_output_path
  sources = [
    "../../common/net_trans_common.c",
    "../../common/wifi_utils.cpp",
    "./trans_stream_test.cpp",
  ]

  include_dirs = [
    "../../common",
    "//third_party/cJSON",
    "//commonlibrary/c_utils/base/include",
    "//foundation/communication/dsoftbus/core/common/include",
    "//foundation/communication/dsoftbus/adapter/common/include",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
    "//foundation/communication/dsoftbus/interfaces/kits/discovery",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",

    "//foundation/communication/wifi/wifi/frameworks/native/include",
    "//foundation/communication/wifi/wifi/frameworks/native/interfaces",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/communication/wifi/wifi/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
    "//foundation/communication/wifi/wifi/services/wifi_standard/wifi_framework/wifi_toolkit/log",
    "//base/security/access_token/interfaces/innerkits/accesstoke/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
  ]

  deps = [
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//foundation/communication/wifi/wifi/frameworks/native:wifi_sdk",
    "//third_party/googletest:gtest_main",
  ]
  external_deps = [ "dsoftbus:softbus_client" ]
  subsystem_name = "communication"
  part_name = "dsoftbus"
}
