# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ohos/config.gni")
import("//build/ohos.gni")
import("//foundation/arkui/napi/napi.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

config("config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Wunused-variable",
  ]
}

config("public_config") {
}

ohos_shared_library("devicemanager") {
  testonly = true
  subsystem_name = "dfs"
  part_name = "dfs_service"
  sources = [ "./devicemanager.cpp" ]
  libs = [ rebase_path(libcxx_ndk_shared_file) ]

  include_dirs = [
    "${services_path}/distributedfiledaemon/include/device",
    "${services_path}/distributedfiledaemon/include/ipc",
    "${services_path}/distributedfiledaemon/include/ipc/distributed_file_daemon_manager.h",
  ]

  configs = [ ":config" ]

  external_deps = [
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "dfs_service:distributed_file_daemon_kit_inner",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  output_extension = "so"
}
